@@ -366,6 +366,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S600   (EXPERIMENTAL)
        Canon   BJC S800   (EXPERIMENTAL)
        Canon PIXMA i80    (EXPERIMENTAL)
+       Canon PIXMA i450   (EXPERIMENTAL)
+       Canon PIXMA i455   (EXPERIMENTAL)
+       Canon PIXMA i470D  (EXPERIMENTAL)
        Canon PIXMA i560   (EXPERIMENTAL)
        Canon PIXMA i850   (EXPERIMENTAL) *1
        Canon PIXMA i860   (EXPERIMENTAL) *1
